--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@ body {
   min-height: 100vh;
   padding: 20px;
   background:
+    /* Minor grid lines (32px) */
     linear-gradient(var(--grid-minor) 1px, transparent 1px),
     linear-gradient(90deg, var(--grid-minor) 1px, transparent 1px),
+    /* Major grid lines (160px) */
     linear-gradient(var(--grid-major) 1px, transparent 1px),
-    linear-gradient(90deg, var(--grid-major) 1px, transparent 1px);
+    linear-gradient(90deg, var(--grid-major) 1px, transparent 1px),
+    /* Minor grid dots at intersections (32px) */
+    radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.10) 0.5px, rgba(15, 23, 42, 0.04) 1.5px, transparent 2px),
+    /* Major grid dots at intersections (160px) - very subtle */
+    radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.08) 1px, rgba(15, 23, 42, 0.03) 2px, transparent 3px);
   background-color: var(--bg);
-  background-size: 32px 32px, 32px 32px, 160px 160px, 160px 160px;
+  background-size: 32px 32px, 32px 32px, 160px 160px, 160px 160px, 32px 32px, 160px 160px;
+  background-position: 0 0, 0 0, 0 0, 0 0, 0 0, 0 0;
 }
 
 .hiw__sheet {
