--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ body {
     linear-gradient(var(--grid-major) 1px, transparent 1px),
     linear-gradient(90deg, var(--grid-major) 1px, transparent 1px),
     /* Minor grid dots at intersections (32px) */
-    radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.18) 1.5px, rgba(15, 23, 42, 0.08) 2.5px, transparent 3.5px),
+    radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.15) 0, rgba(15, 23, 42, 0.15) 1px, rgba(15, 23, 42, 0.08) 1.5px, transparent 2px),
     /* Major grid dots at intersections (160px) */
-    radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.22) 2px, rgba(15, 23, 42, 0.10) 3px, transparent 4px);
+    radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.18) 0, rgba(15, 23, 42, 0.18) 1.5px, rgba(15, 23, 42, 0.08) 2px, transparent 2.5px);
   background-color: var(--bg);
   background-size: 32px 32px, 32px 32px, 160px 160px, 160px 160px, 32px 32px, 160px 160px;
   background-position: 0 0, 0 0, 0 0, 0 0, 0 0, 0 0;
