Fix arrowheads to match arrow colors

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ body {
                 <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
               </marker>
               <marker id="arrowAccent" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
-                <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--accent)" />
+                <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
               </marker>
               <marker id="arrowConc" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
                 <path d="M 0 0 L 10 5 L 0 10 z" fill="rgba(210,132,55,.6)" />
