Remove border and background from Inert gas callout

--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@ body {
 /* SVG Styles */
 .svgLabel { font: 500 12px ui-sans-serif, system-ui; fill: rgba(15,23,42,.7); }
 .svgSubLabel { font: 400 10px ui-sans-serif, system-ui; fill: rgba(71,85,105,.65); }
-.svgCalloutBox { fill: var(--core-fill); stroke: rgba(0,158,186,.5); stroke-width: 1.5; }
-.svgCalloutText { font: 500 10px ui-sans-serif, system-ui; fill: rgba(0,158,186,1); }
+.svgCalloutBox { fill: none; stroke: none; }
+.svgCalloutText { font: 500 10px ui-sans-serif, system-ui; fill: rgba(15,23,42,.7); }
 .moduleBox { stroke-width: 1; filter: none; }
 .module .moduleTitle { font: 600 13px ui-sans-serif, system-ui; fill: rgba(15,23,42,.88); }
 .module .moduleSub { font: 400 10px ui-sans-serif, system-ui; fill: rgba(71,85,105,.75); }
