Make core boundary stepped: narrow at top for text, wide at bottom for modules

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ body {
             </g>
 
             <!-- Core boundary -->
-            <rect x="178" y="15" width="475" height="173" rx="0" class="coreBoundary"/>
+            <path d="M 183 15 L 323 15 L 323 115 L 653 115 L 653 188 L 178 188 L 178 115 L 183 115 Z" class="coreBoundary"/>
           </svg>
         </div>
       </div>
