--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ body {
             </g>
 
             <!-- Core boundary -->
-            <path d="M 183 15 L 323 15 L 323 115 L 653 115 L 653 188 L 178 188 L 178 115 L 183 115 Z" class="coreBoundary"/>
+            <path d="M 178 15 L 323 15 L 323 115 L 653 115 L 653 188 L 178 188 Z" class="coreBoundary"/>
           </svg>
         </div>
       </div>
