Make Dosing in parentheses and all subtitle text same black color as titles

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ body {
 .svgCalloutText { font: 500 10px ui-sans-serif, system-ui; fill: rgba(15,23,42,.7); }
 .moduleBox { stroke-width: 1; filter: none; }
 .module .moduleTitle { font: 600 13px ui-sans-serif, system-ui; fill: rgba(15,23,42,.88); }
-.module .moduleSub { font: 400 10px ui-sans-serif, system-ui; fill: rgba(71,85,105,.75); }
+.module .moduleSub { font: 400 10px ui-sans-serif, system-ui; fill: rgba(15,23,42,.88); }
 .module.core .moduleBox { fill: var(--core-fill); stroke: rgba(0,158,186,.5); }
 .module.cots .moduleBox { fill: var(--cots-fill); stroke: rgba(15,23,42,0.18); }
 .module.concentrate .moduleBox { fill: var(--conc-fill); stroke: rgba(210,132,55,.5); }
@@ -397,7 +397,7 @@ body {
             <g id="m-dosing" class="module core">
               <rect x="185" y="125" width="130" height="55" rx="0" class="moduleBox"/>
               <text x="250" y="150" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
-              <text x="250" y="165" text-anchor="middle" class="moduleSub">Dosing</text>
+              <text x="250" y="165" text-anchor="middle" class="moduleSub">(Dosing)</text>
             </g>
 
             <!-- Arrow Dosing to Sorption -->
