Make Stabilization and Polishing same font/color/size as titles

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ body {
             <g id="m-intake" class="module cots">
               <rect x="20" y="125" width="130" height="55" rx="0" class="moduleBox"/>
               <text x="85" y="150" text-anchor="middle" class="moduleTitle">Intake</text>
-              <text x="85" y="165" text-anchor="middle" class="moduleSub">& Stabilization</text>
+              <text x="85" y="167" text-anchor="middle" class="moduleTitle">& Stabilization</text>
             </g>
 
             <!-- Arrow Intake to Dosing -->
@@ -427,7 +427,7 @@ body {
             <g id="m-polishing" class="module cots">
               <rect x="680" y="125" width="130" height="55" rx="0" class="moduleBox"/>
               <text x="745" y="150" text-anchor="middle" class="moduleTitle">Mineralization</text>
-              <text x="745" y="165" text-anchor="middle" class="moduleSub">& Polishing</text>
+              <text x="745" y="167" text-anchor="middle" class="moduleTitle">& Polishing</text>
             </g>
 
             <!-- Arrow Separation to Concentrate -->
