Make corners square (remove border-radius)

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ body {
 }
 
 .hiw__corner { position: absolute; width: 18px; height: 18px; }
-.hiw__corner.tl { top: -2px; left: -2px; border-left: 3px solid var(--frame); border-top: 3px solid var(--frame); border-top-left-radius: 6px; }
-.hiw__corner.tr { top: -2px; right: -2px; border-right: 3px solid var(--frame); border-top: 3px solid var(--frame); border-top-right-radius: 6px; }
-.hiw__corner.bl { bottom: -2px; left: -2px; border-left: 3px solid var(--frame); border-bottom: 3px solid var(--frame); border-bottom-left-radius: 6px; }
-.hiw__corner.br { bottom: -2px; right: -2px; border-right: 3px solid var(--frame); border-bottom: 3px solid var(--frame); border-bottom-right-radius: 6px; }
+.hiw__corner.tl { top: -2px; left: -2px; border-left: 3px solid var(--frame); border-top: 3px solid var(--frame); }
+.hiw__corner.tr { top: -2px; right: -2px; border-right: 3px solid var(--frame); border-top: 3px solid var(--frame); }
+.hiw__corner.bl { bottom: -2px; left: -2px; border-left: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
+.hiw__corner.br { bottom: -2px; right: -2px; border-right: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
 
 .hiw__header {
   padding: 10px 20px 20px;
