--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@ body {
   pointer-events: none;
 }
 
-.hiw__corner { position: absolute; width: 10px; height: 10px; }
-.hiw__corner.tl { top: -10px; left: -10px; border-left: 3px solid var(--frame); border-top: 3px solid var(--frame); }
-.hiw__corner.tr { top: -10px; right: -10px; border-right: 3px solid var(--frame); border-top: 3px solid var(--frame); }
-.hiw__corner.bl { bottom: -10px; left: -10px; border-left: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
-.hiw__corner.br { bottom: -10px; right: -10px; border-right: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
+.hiw__corner { position: absolute; width: 12px; height: 12px; }
+.hiw__corner.tl { top: -12px; left: -12px; border-right: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
+.hiw__corner.tr { top: -12px; right: -12px; border-left: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
+.hiw__corner.bl { bottom: -12px; left: -12px; border-right: 3px solid var(--frame); border-top: 3px solid var(--frame); }
+.hiw__corner.br { bottom: -12px; right: -12px; border-left: 3px solid var(--frame); border-top: 3px solid var(--frame); }
 
 .hiw__header {
   padding: 10px 20px 20px;
