Match corner color to frame border color

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ body {
 }
 
 .hiw__corner { position: absolute; width: 12px; height: 12px; }
-.hiw__corner.tl { top: -3px; left: -3px; border-left: 3px solid var(--frame); border-top: 3px solid var(--frame); }
-.hiw__corner.tr { top: -3px; right: -3px; border-right: 3px solid var(--frame); border-top: 3px solid var(--frame); }
-.hiw__corner.bl { bottom: -3px; left: -3px; border-left: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
-.hiw__corner.br { bottom: -3px; right: -3px; border-right: 3px solid var(--frame); border-bottom: 3px solid var(--frame); }
+.hiw__corner.tl { top: -3px; left: -3px; border-left: 3px solid var(--frame2); border-top: 3px solid var(--frame2); }
+.hiw__corner.tr { top: -3px; right: -3px; border-right: 3px solid var(--frame2); border-top: 3px solid var(--frame2); }
+.hiw__corner.bl { bottom: -3px; left: -3px; border-left: 3px solid var(--frame2); border-bottom: 3px solid var(--frame2); }
+.hiw__corner.br { bottom: -3px; right: -3px; border-right: 3px solid var(--frame2); border-bottom: 3px solid var(--frame2); }
 
 .hiw__header {
   padding: 10px 20px 20px;
