Add Drinking Water block with arrow from Mineralization

--- a/index.html
+++ b/index.html
@@ -421,6 +421,16 @@ body {
               <text x="745" y="167" text-anchor="middle" class="moduleTitle">& Polishing</text>
             </g>
 
+            <!-- Arrow Mineralization to Drinking Water -->
+            <path d="M 810 152 L 845 152 L 845 282 L 860 282" class="stream" marker-end="url(#arrow)"/>
+
+            <!-- DRINKING WATER -->
+            <g id="m-drinking" class="module cots">
+              <rect x="860" y="255" width="80" height="55" rx="0" class="moduleBox"/>
+              <text x="900" y="277" text-anchor="middle" class="moduleTitle">Drinking</text>
+              <text x="900" y="294" text-anchor="middle" class="moduleSub">Water</text>
+            </g>
+
             <!-- Arrow Separation to Concentrate -->
             <path d="M 580 180 L 580 225 L 635 225 L 635 250" class="stream concentrate" marker-end="url(#arrowConc)"/>
 
