Add & Stabilization to Intake in sidebar

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ body {
         <nav class="hiw__stage-nav">
           <button class="hiw__stage-btn is-active" data-stage="0">
             <span class="hiw__stage-dot"></span>
-            <span class="hiw__stage-name">Intake</span>
+            <span class="hiw__stage-name">Intake<br>& Stabilization</span>
           </button>
           <button class="hiw__stage-btn" data-stage="1">
             <span class="hiw__stage-dot"></span>
