--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ body {
       <!-- Diagram area -->
       <div class="hiw__diagram-area">
         <div class="hiw__diagram-wrapper">
-          <svg class="hiw__svg" viewBox="0 0 950 650" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
+          <svg class="hiw__svg" viewBox="0 0 950 580" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
             <defs>
               <marker id="arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
                 <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
@@ -356,93 +356,93 @@ body {
               </marker>
             </defs>
 
-            <!-- Feed Water above Intake -->
-            <text x="100" y="35" text-anchor="middle" class="svgLabel">Feed water</text>
-            <text x="100" y="49" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
-            <text x="100" y="61" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
+            <!-- Feed Water (top left) -->
+            <text x="120" y="30" text-anchor="middle" class="svgLabel">Feed water</text>
+            <text x="120" y="44" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
+            <text x="120" y="56" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
 
             <!-- Arrow Feed to Intake -->
-            <path d="M 100 70 L 100 90" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 120 65 L 120 85" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- INTAKE -->
+            <!-- INTAKE (left, below feed water) -->
             <g id="m-intake" class="module cots">
-              <rect x="35" y="95" width="130" height="55" rx="0" class="moduleBox"/>
-              <text x="100" y="120" text-anchor="middle" class="moduleTitle">Intake</text>
-              <text x="100" y="137" text-anchor="middle" class="moduleTitle">& Stabilization</text>
+              <rect x="55" y="90" width="130" height="55" rx="0" class="moduleBox"/>
+              <text x="120" y="115" text-anchor="middle" class="moduleTitle">Intake</text>
+              <text x="120" y="132" text-anchor="middle" class="moduleTitle">& Stabilization</text>
             </g>
+
+            <!-- Inert gas (top right) -->
+            <g class="svgCallout">
+              <rect x="520" y="20" width="110" height="36" rx="0" class="svgCalloutBox"/>
+              <text x="575" y="36" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
+              <text x="575" y="48" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
+            </g>
+
+            <!-- Arrow Inert to Gas-Sorbent -->
+            <path d="M 575 56 L 575 85" class="stream" marker-end="url(#arrow)"/>
 
             <!-- Arrow Intake to Gas-Sorbent -->
-            <path d="M 165 122 L 200 122 L 200 175 L 220 175" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 185 117 L 350 117 L 350 117 L 440 117" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- Inert gas above Gas-Sorbent -->
-            <g class="svgCallout">
-              <rect x="230" y="95" width="110" height="36" rx="0" class="svgCalloutBox"/>
-              <text x="285" y="111" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
-              <text x="285" y="123" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
-            </g>
-
-            <!-- Arrow Inert to Dosing -->
-            <path d="M 285 131 L 285 155" class="stream" marker-end="url(#arrow)"/>
-
-            <!-- GAS-SORBENT -->
+            <!-- GAS-SORBENT (center-right, row 2) -->
             <g id="m-dosing" class="module core">
-              <rect x="220" y="160" width="130" height="55" rx="0" class="moduleBox"/>
-              <text x="285" y="185" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
-              <text x="285" y="200" text-anchor="middle" class="moduleSub">(Dosing)</text>
+              <rect x="440" y="90" width="130" height="55" rx="0" class="moduleBox"/>
+              <text x="505" y="115" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
+              <text x="505" y="130" text-anchor="middle" class="moduleSub">(Dosing)</text>
             </g>
 
             <!-- Arrow Gas-Sorbent to Sorption -->
-            <path d="M 350 187 L 385 187 L 385 240 L 405 240" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 570 117 L 640 117" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- SORPTION -->
+            <!-- SORPTION (right, row 2) -->
             <g id="m-sorption" class="module core">
-              <rect x="405" y="225" width="130" height="55" rx="0" class="moduleBox"/>
-              <text x="470" y="250" text-anchor="middle" class="moduleTitle">Sorption</text>
-              <text x="470" y="265" text-anchor="middle" class="moduleSub">(Contactor)</text>
+              <rect x="640" y="90" width="130" height="55" rx="0" class="moduleBox"/>
+              <text x="705" y="115" text-anchor="middle" class="moduleTitle">Sorption</text>
+              <text x="705" y="130" text-anchor="middle" class="moduleSub">(Contactor)</text>
             </g>
 
-            <!-- Arrow Sorption to Separation -->
-            <path d="M 535 252 L 570 252 L 570 305 L 590 305" class="stream" marker-end="url(#arrow)"/>
+            <!-- Arrow Sorption down to Separation -->
+            <path d="M 705 145 L 705 190 L 480 190 L 480 220" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- SEPARATION -->
+            <!-- SEPARATION (center, row 3) -->
             <g id="m-separation" class="module core">
-              <rect x="590" y="290" width="130" height="55" rx="0" class="moduleBox"/>
-              <text x="655" y="315" text-anchor="middle" class="moduleTitle">Separation</text>
-              <text x="655" y="330" text-anchor="middle" class="moduleSub">(Phase split)</text>
+              <rect x="350" y="225" width="130" height="55" rx="0" class="moduleBox"/>
+              <text x="415" y="250" text-anchor="middle" class="moduleTitle">Separation</text>
+              <text x="415" y="265" text-anchor="middle" class="moduleSub">(Phase split)</text>
+            </g>
+
+            <!-- Arrow Intake down to Concentrate -->
+            <path d="M 120 145 L 120 290" class="stream concentrate" marker-end="url(#arrowConc)"/>
+
+            <!-- CONCENTRATE (left, row 3) -->
+            <g id="m-concentrate" class="module concentrate">
+              <rect x="55" y="295" width="130" height="55" rx="0" class="moduleBox"/>
+              <text x="120" y="318" text-anchor="middle" class="moduleTitle">Concentrate</text>
+              <text x="120" y="335" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
             </g>
 
             <!-- Arrow Separation to Mineralization -->
-            <path d="M 720 317 L 755 317 L 755 370 L 775 370" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 415 280 L 415 320 L 550 320 L 550 355" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- MINERALIZATION -->
+            <!-- MINERALIZATION (center-right, row 4, wider) -->
             <g id="m-polishing" class="module cots">
-              <rect x="775" y="355" width="130" height="55" rx="0" class="moduleBox"/>
-              <text x="840" y="380" text-anchor="middle" class="moduleTitle">Mineralization</text>
-              <text x="840" y="397" text-anchor="middle" class="moduleTitle">& Polishing</text>
+              <rect x="400" y="360" width="180" height="55" rx="0" class="moduleBox"/>
+              <text x="490" y="385" text-anchor="middle" class="moduleTitle">Mineralization</text>
+              <text x="490" y="402" text-anchor="middle" class="moduleTitle">& Polishing</text>
             </g>
 
             <!-- Arrow Mineralization to Drinking Water -->
-            <path d="M 840 410 L 840 445 L 870 445 L 870 470" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 580 387 L 650 387 L 650 430 L 700 430" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- DRINKING WATER -->
+            <!-- DRINKING WATER (right, row 5) -->
             <g id="m-drinking" class="module cots">
-              <rect x="805" y="475" width="100" height="55" rx="0" class="moduleBox"/>
-              <text x="855" y="500" text-anchor="middle" class="moduleTitle">Drinking</text>
-              <text x="855" y="517" text-anchor="middle" class="moduleSub">Water</text>
-            </g>
-
-            <!-- Arrow Separation to Concentrate -->
-            <path d="M 655 345 L 655 390 L 500 390 L 500 425" class="stream concentrate" marker-end="url(#arrowConc)"/>
-
-            <!-- CONCENTRATE -->
-            <g id="m-concentrate" class="module concentrate">
-              <rect x="250" y="430" width="320" height="55" rx="0" class="moduleBox"/>
-              <text x="410" y="455" text-anchor="middle" class="moduleTitle">Concentrate / residual stream</text>
-              <text x="410" y="470" text-anchor="middle" class="moduleSub">(typically &lt;5% of flow; controlled output)</text>
+              <rect x="700" y="405" width="100" height="55" rx="0" class="moduleBox"/>
+              <text x="750" y="430" text-anchor="middle" class="moduleTitle">Drinking</text>
+              <text x="750" y="447" text-anchor="middle" class="moduleSub">Water</text>
             </g>
 
             <!-- LEGEND -->
-            <foreignObject x="20" y="510" width="400" height="130">
+            <foreignObject x="20" y="470" width="400" height="110">
               <div xmlns="http://www.w3.org/1999/xhtml" class="svg-legend">
                 <div class="svg-legend__title">LEGEND</div>
                 <div class="svg-legend__item">
@@ -460,8 +460,8 @@ body {
               </div>
             </foreignObject>
 
-            <!-- Core boundary - diagonal stepped shape -->
-            <path d="M 215 90 L 355 90 L 355 155 L 540 155 L 540 220 L 725 220 L 725 285 L 725 350 L 215 350 Z" class="coreBoundary"/>
+            <!-- Core boundary -->
+            <path d="M 435 15 L 635 15 L 635 85 L 775 85 L 775 150 L 485 150 L 485 220 L 345 220 L 345 285 L 435 285 Z" class="coreBoundary"/>
           </svg>
         </div>
       </div>
