Move Inert carrier above Gas-Sorbent block

--- a/index.html
+++ b/index.html
@@ -371,15 +371,15 @@ body {
               <text x="120" y="102" text-anchor="middle" class="moduleTitle">& Stabilization</text>
             </g>
 
-            <!-- Inert gas (top right) -->
+            <!-- Inert gas (above Gas-Sorbent) -->
             <g class="svgCallout">
-              <rect x="520" y="20" width="110" height="36" rx="0" class="svgCalloutBox"/>
-              <text x="575" y="36" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
-              <text x="575" y="48" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
+              <rect x="450" y="20" width="110" height="36" rx="0" class="svgCalloutBox"/>
+              <text x="505" y="36" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
+              <text x="505" y="48" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
             </g>
 
             <!-- Arrow Inert to Gas-Sorbent -->
-            <path d="M 575 56 L 575 85" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 505 56 L 505 85" class="stream" marker-end="url(#arrow)"/>
 
             <!-- Arrow Intake to Gas-Sorbent -->
             <path d="M 185 87 L 350 87 L 350 117 L 440 117" class="stream" marker-end="url(#arrow)"/>
